Properly strip extensions when placing the duplication string

We use a similar matching filter to the one we use when renaming. It's
not ideal (mimetypes are hardcoded, and probably some are missing), but
at least we're consistent.

https://bugzilla.gnome.org/show_bug.cgi?id=351290